--- a/practice2.html
+++ b/practice2.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <header>
-        <h1>시맨틱 태그를 사용하는 이유</h1>
+        <h1>2팀 시맨틱 태그를 사용하는 이유</h1>
     </header>
     <main>
         <ul>
